<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Did you feel that? Quake Info</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="quake_title_label">Did you feel that?</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_map">Map</string>
    <string name="menu_settings">Settings</string>
    <string name="dialog_filter_title">Filter Quakes</string>
    <string name="dialog_filter_magnitude">Magnitude</string>
    <string name="dialog_filter_distance">Distance</string>
    <string name="dialog_filter_time">Time</string>
    <string name="updates">NOTICE:  THIS IS NOT AN ALERT SYSTEM.  THE DATA PROVIDED IS FOR INFORMATIONAL PURPOSES ONLY.  IT SHOULD NOT BE RELIED UPON IN THE EVENT OF AN EARTHQUAKE OR OTHER EVENT.  EARTHQUAKE DATA UPDATES MAY BE DELAYED SIGNIFICANTLY.\n\nUPDATED\nInitial version</string>
    <string name="eula">END USER LICENSE AGREEMENT\n\n
COPYRIGHTS:

Copyright 2014 PastMax. All Rights Reserved.
\n\n
The Did you feel that? software is Copyright 2014 PastMax. All 

rights reserved. This software may not, in whole or in any part, be 

copied, reproduced, transmitted, translated (into any language, natural 

or computer), stored in a retrieval system, reduced to any electronic 

medium or machine readable format, or by any other form or means 

without prior consent, in writing, from PastMax.
\n\n
You are granted a limited license to use this software. The software 

may be used or copied only in accordance with the terms of that 

license, which is described in the following paragraphs.
\n\n
LICENSE:

"THE SOFTWARE" SHALL BE TAKEN TO MEAN THE SOFTWARE 

CONTAINED IN THIS PACKAGE AND ANY SUBEQUENT 

VERSIONS OR UPGRADES RECEIVED AS A RESULT OF HAVING 

PURCHASED THIS PACKAGE. "BUYER" SHALL BE TAKEN AS 

THE ORIGINAL PURCHASER OF THE SOFTWARE.
\n\n
BUYER HAS THE NON-EXCLUSIVE RIGHT TO USE THE 

SOFTWARE ONLY ON A SINGLE COMPUTER. BUYER MAY NOT 

ELECTRONICALLY TRANSFER THE PROGRAM FROM ONE 

COMPUTER TO ANOTHER OVER ANY TYPE OF NETWORK. 

BUYER MAY NOT DISTRIBUTE COPIES OF THE SOFTWARE OR 

THE ACCOMPANYING DOCUMENTATION TO OTHERS EITHER 

FOR A FEE OR WITHOUT CHARGE. BUYER MAY NOT MODIFY 

OR TRANSLATE THE PROGRAM OR DOCUMENTATION. USER 

MAY NOT DISASSEMBLE THE PROGRAM OR ALLOW IT TO BE 

DISASSEMBLED INTO ITS CONTITUENT SOURCE CODE. 

BUYER\'S USE OF THE SOFTWARE INDICATES HIS/HER 

ACCEPTANCE OF THESE TERMS AND CONDITIONS. IF BUYER 

DOES NOT AGREE TO THESE CONDITIONS, RETURN THE 

DISTRIBUTION MEDIA, DOCUMENTATION, AND ASSOCIATED 

MATERIALS TO THE VENDOR FROM WHOM THE SOFTWARE 

WAS PURCHASED, AND ERASE THE SOFTWARE FROM ANY 

AND ALL STORAGE DEVICES UPON WHICH IT MAY HAVE BEEN 

INSTALLED.
\n\n
THIS LICENSE AGREEMENT SHALL BE GOVERNED BY THE 

LAWS OF THE UNITED STATES OF AMERICA, NEVADA AND SHALL INURE TO THE BENEFIT OF PastMax OR ITS ASSIGNS.
\n\n
DISCLAIMER / LIMITATION OF LIABILITY:

BUYER ACKNOWLEDGES THAT THE SOFTWARE MAY NOT BE 

FREE FROM DEFECTS AND MAY NOT SATISFY ALL OF BUYER\'S 

NEEDS.  THE SOFTWARE AND ANY ACCOMPANYING WRITTEN 

MATERIALS ARE LICENSED "AS IS". BUYER\'S EXCLUSIVE 

REMEDY DURING THE WARRANTY PERIOD SHALL CONSIST OF 

REPLACEMENT OF DISTRIBUTION MEDIA IF DETERMINED TO 

BE FAULTY. IN NO EVENT WILL PastMax BE LIABLE FOR 

DIRECT, INDIRECT, INCIDENTAL OR CONSEQUENTIAL DAMAGE 

OR DAMAGES RESULTING FROM LOSS OF USE, OR LOSS OF 

ANTICIPATED PROFITS RESULTING FROM ANY DEFECT IN THE 

PROGRAM, EVEN IF IT HAS BEEN ADVISED OF THE 

POSSIBILITY OF SUCH DAMAGE. SOME LAWS DO NOT ALLOW 

THE EXCLUSION OR LIMITATION OF IMPLIED WARRANTIES OR 

LIABILITIES FOR INCIDENTAL OR CONSEQUENTIAL DAMAGES, 

SO THE ABOVE LIMITATIONS OR EXCLUSION MAY NOT APPLY.
\n\n
SPECIFIC RESTRICTIONS:

IN ACCORDANCE WITH THE COMPUTER SOFTWARE RENTAL 

ACT OF 1990, THIS SOFTWARE MAY NOT BE RENTED, LENT OR 

LEASED.
\n\n
THE SOFTWARE AND ACCOMPANYING DOCUMENTATION MAY 

NOT BE PROVIDED BY A "BACKUP SERVICE" OR ANY OTHER 

VENDOR WHICH DOES NOT PROVIDE AN ORIGINAL PACKAGE 

AS COMPOSED BY PastMax, INCLUDING BUT NOT 

LIMITED TO ALL ORIGINAL DISTRIBUTION MEDIA, 

DOCUMENTATION, REGISTRATION CARDS, AND INSERTIONS.
    </string>
    
</resources>
