<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item 
        android:id="@+id/menu_item_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/menu_refresh"
        android:showAsAction="ifRoom|withText"
        />

    <item 
        android:id="@+id/menu_item_map"
        android:icon="@drawable/ic_menu_mapmode"
        android:title="@string/menu_map"
        android:showAsAction="ifRoom|withText"
        />

    <item 
        android:id="@+id/menu_item_filter"
        android:icon="@drawable/ic_menu_find"
        android:title="@string/menu_filter"
        android:showAsAction="ifRoom|withText"
        />

    <item 
        android:id="@+id/menu_item_settings"
        android:icon="@drawable/ic_menu_settings_holo_light"
        android:title="@string/menu_settings"
        android:showAsAction="never"
        />
</menu>
